chatbot/k8s/oke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - okeusers.sanchezapps.net
        - oketasks.sanchezapps.net
        - okesecurity.sanchezapps.net
      secretName: oke-tls
  rules:
    - host: "okeusers.sanchezapps.net"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: users-service
                port:
                  number: 80
    - host: "oketasks.sanchezapps.net"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tasks-service
                port:
                  number: 80
    - host: "okesecurity.sanchezapps.net"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: security-service
                port:
                  number: 80
